[package]
name = "api-test"
version = "0.1.1"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
demostf-client = { version = "0.1.4", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.4", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
color-eyre = "0.5.8"
colored = "2"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
tf-demo-parser = "0.1"
bitbuffer = "0.7.1"

[profile.dev.package.tf-demo-parser]
opt-level = 3
