[package]
name = "api-test"
version = "0.1.4"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
demostf-client = { version = "0.4.2", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.6.0", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
color-eyre = "0.6.1"
colored = "2.0.0"
tokio = { version = "1.19.2", features = ["macros"] }
tf-demo-parser = "0.5.1"

[profile.dev.package.tf-demo-parser]
opt-level = 3
[profile.dev.package.bitbuffer]
opt-level = 3
